Finalize all infrastructure around view-based CPS
Signed-off-by: Jean Patrick Mathes <jeanpatrick.mathes@gmx.de>